panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__initialisation__test_braced_initialisation_of_char_ptr_with_string_literal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/initialisation/test_braced_initialisation_of_char_ptr_with_string_literal.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/initialisation/test_braced_initialisation_of_char_ptr_with_string_literal.c"
   (declaration strlen~0 `fn(∅: ptr<char const>) -> typeof((sizeof 0))` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration s~3 `ptr<char const>`
            (braced
               (string "abc")))
         (return
            (call (name strlen~0 `fn(∅: ptr<char const>) -> typeof((sizeof 0))`)
               (name s~3 `ptr<char const>`))))))

----- stderr -----
