panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__initialisation__test_error_global_name_with_definition_later_redeclared_in_local_scope.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/initialisation/test_error_global_name_with_definition_later_redeclared_in_local_scope.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/initialisation/test_error_global_name_with_definition_later_redeclared_in_local_scope.c"
   (declaration name~0 `int` 42)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration name~3 `int` 27)
         (compound-statement
            (declaration name~4 `int` ∅)
            (return (name name~4 `int`))))))

----- stderr -----
